# gitmon-client-experiment

./: .gitmodules  README.md  gitmon-client.cabal  stack.yaml
app/: Main.hs
src/: Client.hs
