name:                gitmon-client
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/gitmon-client#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Client
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , gitlib
                     , gitlib-libgit2
                     , mtl
                     , network
                     , text-icu
                     , text
  default-language:    Haskell2010

executable gitmon-client-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , directory
                     , gitlib
                     , gitlib-libgit2
                     , gitmon-client
                     , mtl
                     , text
  default-language:    Haskell2010

test-suite gitmon-client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gitmon-client
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/gitmon-client
